--- a/labsession1.ipynb
+++ b/labsession1.ipynb
@@ -53,22 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8865d224",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "spark = SparkSession.builder.appName(\"importing and data slicing\") # name should be quniue for less conflicts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ba7cb632",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -76,25 +62,43 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Builder' object has no attribute 'read'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m flights \u001b[38;5;241m=\u001b[39m \u001b[43mspark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[38;5;241m.\u001b[39mcsv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./nyc/nycflights.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, header \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m airines \u001b[38;5;241m=\u001b[39m spark\u001b[38;5;241m.\u001b[39mread\u001b[38;5;241m.\u001b[39mcsv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./nyc/nyc_airlines.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, header \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Builder' object has no attribute 'read'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Using incubator modules: jdk.incubator.vector\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "25/11/26 19:38:13 WARN Utils: Your hostname, Biplovs-MacBook-Air.local, resolves to a loopback address: 127.0.0.1; using 192.168.1.66 instead (on interface en0)\n",
+      "25/11/26 19:38:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/11/26 19:38:43 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/11/26 19:38:44 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
    "source": [
-    "flights = spark.read.csv('./nyc/nycflights.csv', header = True)\n",
-    "airines = spark.read.csv('./nyc/nyc_airlines.csv', header = True)"
+    "spark = SparkSession.builder.appName(\"importing and data slicing\").getOrCreate() # name should be quniue for less conflicts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "ba7cb632",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "flights = spark.read.csv('./nyc/nyc_flights.csv', header = True)\n",
+    "airlines = spark.read.csv('./nyc/nyc_airlines.csv', header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a584b669",
    "metadata": {
     "vscode": {
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bcc93318",
    "metadata": {
     "vscode": {
@@ -120,19 +124,51 @@
    "source": [
     "flights.createOrReplaceTempView('flights')\n",
     "airlines.createOrReplaceTempView('airlines')\n",
-    "airports.createOrReplaceTempView('airports')\n"
+    "# airports.createOrReplaceTempView('airports')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "56c8e19d",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+---+--------+--------------+---------+--------+--------------+---------+-------+------+-------+------+----+--------+--------+----+------+--------------------+\n",
+      "|year|month|day|dep_time|sched_dep_time|dep_delay|arr_time|sched_arr_time|arr_delay|carrier|flight|tailnum|origin|dest|air_time|distance|hour|minute|           time_hour|\n",
+      "+----+-----+---+--------+--------------+---------+--------+--------------+---------+-------+------+-------+------+----+--------+--------+----+------+--------------------+\n",
+      "|2013|    1|  1|     517|           515|        2|     830|           819|       11|     UA|  1545| N14228|   EWR| IAH|     227|    1400|   5|    15|2013-01-01T10:00:00Z|\n",
+      "|2013|    1|  1|     533|           529|        4|     850|           830|       20|     UA|  1714| N24211|   LGA| IAH|     227|    1416|   5|    29|2013-01-01T10:00:00Z|\n",
+      "|2013|    1|  1|     542|           540|        2|     923|           850|       33|     AA|  1141| N619AA|   JFK| MIA|     160|    1089|   5|    40|2013-01-01T10:00:00Z|\n",
+      "|2013|    1|  1|     544|           545|       -1|    1004|          1022|      -18|     B6|   725| N804JB|   JFK| BQN|     183|    1576|   5|    45|2013-01-01T10:00:00Z|\n",
+      "|2013|    1|  1|     554|           600|       -6|     812|           837|      -25|     DL|   461| N668DN|   LGA| ATL|     116|     762|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     554|           558|       -4|     740|           728|       12|     UA|  1696| N39463|   EWR| ORD|     150|     719|   5|    58|2013-01-01T10:00:00Z|\n",
+      "|2013|    1|  1|     555|           600|       -5|     913|           854|       19|     B6|   507| N516JB|   EWR| FLL|     158|    1065|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     557|           600|       -3|     709|           723|      -14|     EV|  5708| N829AS|   LGA| IAD|      53|     229|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     557|           600|       -3|     838|           846|       -8|     B6|    79| N593JB|   JFK| MCO|     140|     944|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     558|           600|       -2|     753|           745|        8|     AA|   301| N3ALAA|   LGA| ORD|     138|     733|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     558|           600|       -2|     849|           851|       -2|     B6|    49| N793JB|   JFK| PBI|     149|    1028|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     558|           600|       -2|     853|           856|       -3|     B6|    71| N657JB|   JFK| TPA|     158|    1005|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     558|           600|       -2|     924|           917|        7|     UA|   194| N29129|   JFK| LAX|     345|    2475|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     558|           600|       -2|     923|           937|      -14|     UA|  1124| N53441|   EWR| SFO|     361|    2565|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     559|           600|       -1|     941|           910|       31|     AA|   707| N3DUAA|   LGA| DFW|     257|    1389|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     559|           559|        0|     702|           706|       -4|     B6|  1806| N708JB|   JFK| BOS|      44|     187|   5|    59|2013-01-01T10:00:00Z|\n",
+      "|2013|    1|  1|     559|           600|       -1|     854|           902|       -8|     UA|  1187| N76515|   EWR| LAS|     337|    2227|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     600|           600|        0|     851|           858|       -7|     B6|   371| N595JB|   LGA| FLL|     152|    1076|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     600|           600|        0|     837|           825|       12|     MQ|  4650| N542MQ|   LGA| ATL|     134|     762|   6|     0|2013-01-01T11:00:00Z|\n",
+      "|2013|    1|  1|     601|           600|        1|     844|           850|       -6|     B6|   343| N644JB|   EWR| PBI|     147|    1023|   6|     0|2013-01-01T11:00:00Z|\n",
+      "+----+-----+---+--------+--------------+---------+--------+--------------+---------+-------+------+-------+------+----+--------+--------+----+------+--------------------+\n",
+      "only showing top 20 rows\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"\"\" SELECT * FROM flights \"\"\"\n",
     "result = spark.sql(query)\n",
