--- a/labsession1.ipynb
+++ b/labsession1.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "ba7cb632",
    "metadata": {
     "vscode": {
@@ -93,12 +93,13 @@
    "outputs": [],
    "source": [
     "flights = spark.read.csv('./nyc/nyc_flights.csv', header = True)\n",
-    "airlines = spark.read.csv('./nyc/nyc_airlines.csv', header = True)"
+    "airlines = spark.read.csv('./nyc/nyc_airlines.csv', header = True)\n",
+    "airports = spark.read.csv('./nyc/nyc_airports.csv', header = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "a584b669",
    "metadata": {
     "vscode": {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "bcc93318",
    "metadata": {
     "vscode": {
@@ -124,12 +125,12 @@
    "source": [
     "flights.createOrReplaceTempView('flights')\n",
     "airlines.createOrReplaceTempView('airlines')\n",
-    "# airports.createOrReplaceTempView('airports')\n"
+    "airports.createOrReplaceTempView('airports')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "56c8e19d",
    "metadata": {
     "vscode": {
@@ -177,56 +178,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9860cc25",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 17:>                                                         (0 + 8) / 8]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------+\n",
+      "|                name|num_delay|\n",
+      "+--------------------+---------+\n",
+      "|United Air Lines ...|    27261|\n",
+      "+--------------------+---------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    }
+   ],
    "source": [
     "# challange 1: which airline has the highest number of delayed departures\n",
-    "query1 = \"\"\"SELECT a.name,\n",
-    "COUNT(*) as num_delay FROM flights f\n",
-    "LEFT JOIN airlines a ON f.carrier = a.carrier\n",
-    "WHERE f.dep_delay > 0 \n",
-    "GROUP BY a.name\n",
-    "ORDER BY num_delay DESC\n",
-    "LIMIT 1\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29262b81",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "# query1 = \"\"\"SELECT a.name,\n",
+    "# COUNT(*) as num_delay FROM flights f\n",
+    "# LEFT JOIN airlines a ON f.carrier = a.carrier\n",
+    "# WHERE f.dep_delay > 0 \n",
+    "# GROUP BY a.name\n",
+    "# ORDER BY num_delay DESC\n",
+    "# LIMIT 1\"\"\"\n",
+    "\n",
+    "\n",
+    "# Check your Python code to ensure query1 is defined as:\n",
+    "query1 = \"\"\"\n",
+    "SELECT \n",
+    "    a.name,\n",
+    "    COUNT(*) AS num_delay\n",
+    "FROM \n",
+    "    flights f\n",
+    "LEFT JOIN \n",
+    "    airlines a \n",
+    "ON \n",
+    "    f.carrier = a.carrier\n",
+    "WHERE \n",
+    "    try_cast(f.dep_delay AS INT) > 0 -- <-- Use try_cast to handle 'NA'\n",
+    "GROUP BY \n",
+    "    a.name\n",
+    "ORDER BY \n",
+    "    num_delay DESC\n",
+    "LIMIT 1\n",
+    "\"\"\"\n",
     "result1 = spark.sql(query1)\n",
-    "result.show()"
+    "result1.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d23c43f2",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 21:>                                                         (0 + 8) / 8]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------+\n",
+      "|                name|num_delay|\n",
+      "+--------------------+---------+\n",
+      "|United Air Lines ...|    27261|\n",
+      "+--------------------+---------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    }
+   ],
    "source": [
     "# challange 2: fastest araival in which airport\n",
     "query2 = \"\"\"SELECT a.name, \n",
     "AVG(arr_delay) as mean_delay \n",
     "FROM flights f JOIN aiports on f.dest = a.faa\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "result2 = spark.sql(query1)\n",
+    "result2.show()"
    ]
   },
   {
@@ -240,7 +305,8 @@
    },
    "outputs": [],
    "source": [
-    "# challange 3 : jfk to sea aiport samma avg maximum and minimum airtime"
+    "# challange 3 : jfk to sea aiport samma avg maximum and minimum airtime\n",
+    "query3 = "
    ]
   },
   {
